[gd_scene load_steps=6 format=3 uid="uid://csef5s4gv5h76"]

[ext_resource type="Script" path="res://Scenes/projectiles/ice_shield.gd" id="1_s4gff"]

[sub_resource type="Animation" id="Animation_t36qj"]
resource_name = "rotate"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="Animation" id="Animation_oypy3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c5lnb"]
_data = {
"RESET": SubResource("Animation_oypy3"),
"rotate": SubResource("Animation_t36qj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vpypu"]

[node name="IceShield" type="Area2D" node_paths=PackedStringArray("spell_emit_sound")]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_s4gff")
num_ice_balls_spawn = 6
spell_name = "ICE SHIELD"
spell_emit_sound = NodePath("EmitNoise")

[node name="IceBalls" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="IceBalls"]
libraries = {
"": SubResource("AnimationLibrary_c5lnb")
}
autoplay = "rotate"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.20354, 3.20354)
shape = SubResource("CircleShape2D_vpypu")

[node name="IceBallSpawn" type="Marker2D" parent="."]
position = Vector2(0, -32)
scale = Vector2(0.998408, 1)

[node name="EmitNoise" type="AudioStreamPlayer2D" parent="."]
